@@ -1,3 +1,13 @@
+2010-01-13  Ben Murdoch  <benm@google.com>
+
+        Reviewed by Simon Hausmann.
+
+        [Android] [Qt] The JSC ScriptController does not consider Touch Events user gestures.
+        https://bugs.webkit.org/show_bug.cgi?id=33597
+
+        * bindings/js/ScriptController.cpp:
+        (WebCore::ScriptController::processingUserGestureEvent): Add the touch event types (touchstart, touchmove and touchend) to the set of events that are considered user gestures.
+
 2010-01-13  Simon Hausmann  <simon.hausmann@nokia.com>
 
         Rubber-stamped by Tor Arne Vestbø.
